src/objects/GridBuddy_Usage_Analytics__c.object
<CustomObject>
    <fields>
        <fullName>Field_API_Names__c</fullName>
        <label>Field API Names</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Grid_Name__c</fullName>
        <label>Grid Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Session__c</fullName>
        <label>Session</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>GridBuddy_Usage_Analytics</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>GridBuddy Usage Analytics</label>
    <nameField>
        <label>GridBuddy Usage Analytics Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>GridBuddy Usage Analytics</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>